--- a/src/sass/layout/results.scss
+++ b/src/sass/layout/results.scss
@@ -16,7 +16,7 @@
   &__list {
     display: flex;
     flex-direction: column;
-    padding-top: 1rem;
+    padding: 1rem 0;
     border-top: 1px solid $color-grey-light-1;
   }
 
